# pkg/apis/pipeline/v1beta1/pipelinerun_types.go
@@ -431,7 +431,8 @@ func (pr *PipelineRunStatus) MarkRunning(reason, messageFormat string, messageA 
 type ChildStatusReference struct {
 	runtime.TypeMeta `json:",inline"`
 	// Name is the name of the TaskRun or Run this is referencing.
-	Name string `json:"name,omitempty"`
+	Name        string `json:"name,omitempty"`
+	DisplayName string `json:"displayName,omitempty"`
 	// PipelineTaskName is the name of the PipelineTask this is referencing.
 	PipelineTaskName string `json:"pipelineTaskName,omitempty"`
 
